Fixed wrong spacing on img in imageSection

--- a/storefront/components/ImageSection/ImageSection.module.css
+++ b/storefront/components/ImageSection/ImageSection.module.css
@@ -52,6 +52,7 @@
 
 .img {
   width: 360px;
+  display: block;
 }
 
 .buttons {
